--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,7 @@
 server {
-    listen 80;
-    server_name worklifebarometer.com;
+	  listen 80 default_server;
+	  listen [::]:80 default_server;
+    server_name worklifebarometer.com worklifebarometer.se worklifebarometer.dk www.worklifebarometer.com www.worklifebarometer.se www.worklifebarometer.dk;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -14,7 +15,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name worklifebarometer.com;
+    server_name worklifebarometer.com www.worklifebarometer.com;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/worklifebarometer.com/fullchain.pem;
@@ -30,24 +31,9 @@ server {
     }
 }
 
-
-server {
-    listen 80;
-    server_name worklifebarometer.dk;
-    server_tokens off;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
 server {
     listen 443 ssl;
-    server_name worklifebarometer.dk;
+    server_name worklifebarometer.dk www.worklifebarometer.dk;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/worklifebarometer.dk/fullchain.pem;
@@ -63,20 +49,6 @@ server {
     }
 }
 
-
-server {
-    listen 80;
-    server_name worklifebarometer.se;
-    server_tokens off;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
 
 server {
     listen 443 ssl;
