--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -15,7 +15,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name worklifebarometer.com www.worklifebarometer.com;
+    server_name worklifebarometer.com;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/worklifebarometer.com/fullchain.pem;
@@ -33,11 +33,48 @@ server {
 
 server {
     listen 443 ssl;
-    server_name worklifebarometer.dk www.worklifebarometer.dk;
+    server_name www.worklifebarometer.com;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/www.worklifebarometer.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.worklifebarometer.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass  http://howdy.care;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name worklifebarometer.dk;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/worklifebarometer.dk/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/worklifebarometer.dk/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass  http://howdy.care/dk;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+}
+
+
+server {
+    listen 443 ssl;
+    server_name www.worklifebarometer.dk;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/www.worklifebarometer.dk/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.worklifebarometer.dk/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -57,6 +94,25 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/worklifebarometer.se/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/worklifebarometer.se/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass  http://howdy.care/se;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+}
+
+
+server {
+    listen 443 ssl;
+    server_name www.worklifebarometer.se;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/www.worklifebarometer.se/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.worklifebarometer.se/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
