Use wildstar for domains

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,11 +1,11 @@
 server {
-	  listen 80 default_server;
-	  listen [::]:80 default_server;
-    server_name worklifebarometer.com worklifebarometer.se worklifebarometer.dk www.worklifebarometer.com www.worklifebarometer.se www.worklifebarometer.dk;
+	  listen 80;
+	  listen [::]:80;
+    server_name .worklifebarometer.com .worklifebarometer.se .worklifebarometer.dk;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        root /var/www/certbot/;
     }
 
     location / {
@@ -15,7 +15,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name worklifebarometer.com;
+    server_name .worklifebarometer.com;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/worklifebarometer.com/fullchain.pem;
@@ -24,34 +24,16 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://howdy.care;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        return 301 https://howdy.care/;
     }
 }
 
 server {
     listen 443 ssl;
-    server_name www.worklifebarometer.com;
-    server_tokens off;
-
-    ssl_certificate /etc/letsencrypt/live/www.worklifebarometer.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.worklifebarometer.com/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    location / {
-        proxy_pass  http://howdy.care;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name worklifebarometer.dk;
+    server_name .worklifebarometer.dk;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/worklifebarometer.dk/fullchain.pem;
@@ -60,36 +42,17 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://howdy.care/dk;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        return 301 https://howdy.care/dk/;
     }
 }
 
 
 server {
     listen 443 ssl;
-    server_name www.worklifebarometer.dk;
-    server_tokens off;
-
-    ssl_certificate /etc/letsencrypt/live/www.worklifebarometer.dk/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.worklifebarometer.dk/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    location / {
-        proxy_pass  http://howdy.care/dk;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-    }
-}
-
-
-server {
-    listen 443 ssl;
-    server_name worklifebarometer.se;
+    server_name .worklifebarometer.se;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/worklifebarometer.se/fullchain.pem;
@@ -98,28 +61,9 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://howdy.care/se;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-    }
-}
-
-
-server {
-    listen 443 ssl;
-    server_name www.worklifebarometer.se;
-    server_tokens off;
-
-    ssl_certificate /etc/letsencrypt/live/www.worklifebarometer.se/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.worklifebarometer.se/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    location / {
-        proxy_pass  http://howdy.care/se;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        return 301 https://howdy.care/se/;
     }
 }
